# ever-wallet-api

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  builder.dockerfile  cloudbuild-template.yaml  default.nix  deploy.dockerfile  entrypoint.sh  shell.nix  sqlx-data.json
config/prod/: config.yaml  ton-global.config.json
config/test/: config.yaml
kustomize/: overrides.prod.yaml  overrides.test.yaml  service-http-expose.prod.yaml  service-http-expose.test.yaml
migrations/: 20210809111457_init_db.sql  20210810100254_transactions.sql  20210810100344_transactions_events.sql  20210810100439_address_balance.sql  20210811104919_token_transactions.sql  20210811140022_token_owners.sql  20210813123204_token_transactions_events.sql  20210903081413_transactions_add_sender_is_token_wallet.sql  20210903082901_transactions_events_add_sender_is_token_wallet.sql  20210910102831_token_whitelist.sql  20210927151652_new_token_whitelist.sql  20211007170839_initial_setup.sql  20211007170851_transactions.sql  20211007170940_address_balance.sql  20211007171001_address_balance_fix.sql  20211007171015_tasks.sql  20211007171027_address_import.sql  20211007171042_transactions_hash_index.sql  20211007171101_transaction_lt_index.sql  20211007171128_transaction_timestamp.sql  20211007171337_fixes_old_scheme.sql  20211007171517_token_balance.sql  20211007171529_token_transactions.sql  20211007171539_token_owners.sql  20211007171551_token_transactions_events.sql  20211007171715_token_whitelist.sql  20211012222655_fix_token_whitelist.sql  20211018134032_drop_sender_is_token_wallet.sql  20211130091836_transactions_events_add_multisig_transaction_id.sql  20220204093759_token_version.sql  20220221084331_update_token_whitelist.sql  20220302080434_add_eupi_to_whitelist.sql  20220509102108_add_soon_to_whitelist.sql  20220627180512_token_in_msg_hash.sql  20220718173346_add_state_to_token_whitelist.sql  20220719160415_drop_state_from_token_whitelist.sql  20220719160818_add_last_key_blocks.sql  20240507123010_add_ever_wallet.sql  20241003224300_add_sender.sql
nix/: local-test.nix  module.nix  overlay.nix  pkgs.nix  sources.json  sources.nix  ton-global.config.json
packer/gcp/: build.sh  image.json  update-machine.sh
packer/gcp/scripts/: create-fs.sh  env.sh  run.sh  updater.sh
scripts/: api_service.sh  pre-request-script.js  root_token.sh  setup.sh  update.sh  wallet.sh
scripts/contrib/: config.yaml  signature-test.sh  ton-wallet-api.native.service
src/: commands.rs  lib.rs  main.rs  prelude.rs  server.rs  settings.rs  token.rs
src/api/: docs.rs  error.rs  mod.rs  utils.rs
src/api/controllers/: address.rs  authorization.rs  blockchain.rs  docs.rs  events.rs  metrics.rs  misc.rs  mod.rs  network.rs  ton.rs  ton_metrics.rs  transactions.rs
src/api/requests/: address.rs  events.rs  misc.rs  mod.rs  transactions.rs
src/api/responses/: address.rs  blockchain.rs  events.rs  metrics.rs  misc.rs  mod.rs  transactions.rs
src/api/router/: address.rs  blockchain.rs  events.rs  metrics.rs  misc.rs  mod.rs  tokens.rs  ton_metrics.rs  transactions.rs
src/axum_api/: error.rs  mod.rs
src/axum_api/controllers/: address.rs  auth.rs  docs.rs  events.rs  healthcheck.rs  metrics.rs  misc.rs  mod.rs  tokens.rs
src/axum_api/requests/: address.rs  events.rs  misc.rs  mod.rs
src/axum_api/responses/: address.rs  events.rs  metrics.rs  mod.rs  tokens.rs
src/axum_api/router/: address.rs  auth.rs  events.rs  metrics.rs  misc.rs  mod.rs  tokens.rs
src/client/: mod.rs
src/client/callback/: mod.rs
src/client/callback/requests/: mod.rs
src/client/ton/: constants.rs  mod.rs  models.rs  utils.rs
src/client/ton/responses/: mod.rs
src/client/ton/token_wallet/: mod.rs
src/client/ton/ton_wallet/: highload_wallet_v2.rs  mod.rs  multisig.rs  safe_multisig.rs  wallet_v3.rs
src/client/ton_api/: mod.rs
src/client/ton_api/responses/: mod.rs
src/indexer/: mod.rs
src/indexer/models/: mod.rs
src/indexer/ton_contracts/: mod.rs  models.rs  ton_token_wallet_contract.rs
src/indexer/ton_subscriber/: mod.rs
src/metrics_exporter/: mod.rs
src/models/: account_enums.rs  account_transaction_event.rs  address.rs  blockchain.rs  key.rs  last_key_blocks.rs  metrics.rs  mod.rs  owners_cache.rs  service_id.rs  sqlx.rs  states_cache.rs  token_balance.rs  token_transaction_events.rs  token_transactions.rs  transaction_events.rs  transactions.rs
src/redis/: blocks.rs  keys.rs  mod.rs  redis_executor.rs
src/services/: auth.rs  mod.rs  storage.rs  ton.rs
src/sqlx_client/: addresses.rs  api_service.rs  api_service_callbacks.rs  balances.rs  keys.rs  last_key_blocks.rs  mod.rs  raw_transactions.rs  root_token_contracts.rs  token_balances.rs  token_owners.rs  token_transactions.rs  token_transactions_events.rs  token_whitelist.rs  transactions.rs  transactions_events.rs
src/ton_core/: mod.rs  settings.rs
src/ton_core/models/: mod.rs
src/ton_core/monitoring/: full_state.rs  mod.rs  token_transaction.rs  token_transaction_parser.rs  ton_transaction.rs  ton_transaction_parser.rs  wallet_notifications.rs
src/ton_core/ton_contracts/: mod.rs  models.rs  wallet_notifications_contract.rs
src/ton_core/ton_subscriber/: mod.rs
src/ton_core/transaction_handler/: mod.rs  token_transaction.rs  transaction.rs
src/ton_core/transaction_parser/: mod.rs  token.rs  ton.rs
src/utils/: address.rs  encoding.rs  existing_contract.rs  mod.rs  pending_messages_queue.rs  root_contract_cache.rs  root_state_cache.rs  shard_utils.rs  token_wallet.rs  tx_context.rs
src/ws_indexer/: functions_history.rs  mod.rs
src/ws_indexer/abi/: TONTokenWallet.abi.json  mod.rs  token_root.json
src/ws_indexer/functions_history/: models.rs
