[package]
name = "ton-wallet-api"
version = "0.1.0"
edition = "2021"
authors = ["Broxus team"]
publish = false
license-file = "LICENSE"

[dependencies]
anyhow = "1.0"
argh = "0.1"
argon2 = "0.3.1"
async-trait = "0.1"
base64 = "0.13"
bigdecimal = { version = "0.2.0", features = ["serde"] }
block-modes = "*"
chacha20poly1305 = "0.10.0-pre"
chrono = "0.4.19"
config = { version = "0.12", default-features = false, features = ["yaml"] }
derive_more = "*"
futures = "0.3"
hex = "0.4"
hmac = "0.11.0"
http = "0.2"
hyper = { version = "0.14" }
indexmap = "~1.6.2"
itertools = "0.10.1"
lazy_static = "1.4.0"
log = { version = "0.4", features = ["std", "serde"] }
log4rs = "1.0"
lru = "0.6.5"
num-bigint = "0.3"
num-traits = "0.2"
opg = { version = "0.0", features = ["uuid"] }
parking_lot = "0.12.0"
pin-project = "0.4"
public-ip = "0.2"
rand = "0.8"
regex = "1.5"
reqwest = { version = "0.11", features = ["json"] }
r2d2 = "0.8.9"
rustc-hash = "1.1.0"
sentry = { version = "0.23.0", features = ["log", "debug-logs"] }
sentry-panic = { version = "0.23.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
sha2 = "0.9"
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "uuid", "bigdecimal", "offline", "chrono", "json"] }
thiserror = "1.0"
tokio = { version = "1.16.1", features = ["sync", "fs", "rt-multi-thread", "macros", "signal", "parking_lot"] }
tokio-util = "0.7.1"
url = { version = "2.2.2", features = ["serde"] }
urlencoding = "2.1.0"
uuid = { version = "0.8", features = ["v4", "serde"] }
warp = { version = "0.3" }

ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }

everscale-network = "0.3.2"

# TON specific dependencies
ton_block = { git = "https://github.com/broxus/ton-labs-block" }
ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_types = { git = "https://github.com/broxus/ton-labs-types" }

# Nekoton SDK
nekoton = { git = "https://github.com/broxus/nekoton.git", default-features = false }
nekoton-abi = { git = "https://github.com/broxus/nekoton.git", features = ["derive"] }
nekoton-utils = { git = "https://github.com/broxus/nekoton.git" }
nekoton-contracts = { git = "https://github.com/broxus/nekoton.git" }

# Indexer engine
ton-indexer = { git = "https://github.com/broxus/ton-indexer.git" }

[dev-dependencies]
env_logger = "0.8.4"
