[package]
name = "ton-wallet-api"
version = "0.1.0"
edition = "2021"
authors = ["Broxus team"]
publish = false
license-file = "LICENSE"

[dependencies]
anyhow = "1.0"
argh = "0.1"
argon2 = "0.4.1"
async-trait = "0.1"
base64 = "0.13"
bigdecimal = { version = "0.2.0", features = ["serde"] }
chacha20poly1305 = "0.10.0-pre"
chrono = "0.4.19"
config = { version = "0.12", default-features = false, features = ["yaml"] }
dashmap = "5.3.4"
derive_more = "*"
everscale-network = "0.3.2"
futures = "0.3"
hex = "0.4"
hmac = "0.11.0"
http = "0.2"
hyper = { version = "0.14" }
itertools = "0.10.1"
lazy_static = "1.4.0"
log = { version = "0.4", features = ["std", "serde"] }
log4rs = "1.0"
lru = "0.7.8"
num-bigint = "0.3"
num-traits = "0.2"
opg = { version = "0.1", features = ["uuid"] }
parking_lot = "0.12.0"
pomfrit = "0.1"
rand = "0.8"
regex = "1.5"
reqwest = { version = "0.11", features = ["json"] }
rustc-hash = "1.1.0"
sentry = { version = "0.23.0", features = ["log", "debug-logs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.4"
sha2 = "0.9"
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "uuid", "bigdecimal", "offline", "chrono", "json"] }
thiserror = "1.0"
tokio = { version = "1.16.1", features = ["sync", "fs", "rt-multi-thread", "macros", "signal", "parking_lot"] }
tokio-util = "0.7.1"
uuid = { version = "0.8", features = ["v4", "serde"] }
warp = { version = "0.3" }

ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }

# TON specific dependencies
ton_block = { git = "https://github.com/broxus/ton-labs-block" }
ton_abi = { git = "https://github.com/broxus/ton-labs-abi" }
ton_types = { git = "https://github.com/broxus/ton-labs-types" }

# Nekoton SDK
nekoton = { git = "https://github.com/broxus/nekoton.git", default-features = false }
nekoton-abi = { git = "https://github.com/broxus/nekoton.git", features = ["derive"] }
nekoton-utils = { git = "https://github.com/broxus/nekoton.git" }
nekoton-contracts = { git = "https://github.com/broxus/nekoton.git" }

# Broxus utils
broxus-util = { version = "0.1.3", features = ["public-ip", "config", "log4rs"] }

# Indexer engine
ton-indexer = { git = "https://github.com/broxus/ton-indexer.git" }
